# SPBUHomework

./: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  README.md  hw1_hard.cpp
2/: comparison.txt  solution.cpp
3/: solution.cpp
FileManager/: CMakeLists.txt  FileManagerCore.cpp  FileManagerCore.h  FileManagerOption.cpp  FileManagerOption.h  GraphicalFileManager.cpp  GraphicalFileManager.h  main.cpp
praciceWorkOne/: h1.cpp
practice_1/: h1.cpp  m1.cpp  m2.cpp
test/: 1.cpp  2.cpp  3.cpp
